fix/changes-to-achieve-jesus-specs (#43)
* fix(security): modify the response token according to the grant type (client_credentials should not include id_token or refresh_token).

* build(gradle): update version

* refactor(security): if else to add id token and refresh token

* fix(security): Set the scopes profile and email in the response id_token, regardless of whether they are sent in the request.

* fix(security): Change the client_id_schema to did:key in the authorization request

* fix(security): Modify the client_id in the response access_token so that it returns the URL

* fix(resources): Add LEARCredentialMachine

* fix(resources): extract did key as environment variable

* fix(resources): extract did key as environment variable

* fix(resources): extract did key as environment variable

* refactor(security): refactor handle grant

* refactor(security): refactor handle grant

* fix sonar issue

* refactor(resources): rename lear credential machine to verifiable credential

* refactor(resources): rename did to did key

---------

Co-authored-by: RubenModamioGarcia <ruben.modamio@in2.es>